# dotz

./: .envrc  Cargo.toml  README.md  demo.tape  deny.toml  flake.nix  package.nix  rust-toolchain.toml
.github/: dependabot.yml
.github/workflows/: check-rs.yml  links.yml
dev/: default.nix
nix/: package.nix
nix/dev/: default.nix  flake-module.nix  flake.nix
src/: lib.rs  main.rs
