[package]
name = "dotz"
version = "0.1.0"
edition = "2024"
publish = false
license = "Unlicense"
description = "A colorscript that prints your terminal full of stuff."
readme = "README.md"
homepage = "https://github.com/KP64/dotz"
repository = "https://github.com/KP64/dotz"
keywords = ["cli, terminal, ricing, color, script"]
categories = ["command-line-utilities"]

[lints.rust]
unsafe-code = "forbid"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
multiple_crate_versions = "allow"
missing_docs_in_private_items = "warn"


[profile.release]
lto = true
codegen-units = 1

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
crossterm = "0.29.0"
itertools = "0.14.0"
rand = "0.9.1"
