[package]
name = "dotz"
version = "0.1.0"
edition = "2024"
publish = false
license = "Unlicense"
description = "A colorscript that gradually fills your screen with (a) character."
readme = "README.md"
homepage = "https://github.com/KP64/dotz"
repository = "https://github.com/KP64/dotz"
keywords = ["cli, terminal, ricing, color, script"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5.38", features = ["derive"] }
crossterm = "0.29.0"
rand = "0.9.1"

[profile.release]
lto = true
codegen-units = 1

[lints.clippy]
absolute_paths = "warn"
allow_attributes = "deny"
allow_attributes_without_reason = "deny"
arithmetic_side_effects = "warn"
as_pointer_underscore = "warn"
as_underscore = "warn"
assertions_on_result_states = "warn"
cfg_not_test = "deny"
clone_on_ref_ptr = "warn"
create_dir = "deny"
dbg_macro = "warn"
default_union_representation = "deny"
deref_by_slicing = "warn"
disallowed_script_idents = "deny"
doc_include_without_cfg = "deny"
else_if_without_else = "deny"
empty_drop = "deny"
empty_enum_variants_with_brackets = "deny"
empty_structs_with_brackets = "deny"
error_impl_error = "deny"
exit = "deny"
expect_used = "warn"
field_scoped_visibility_modifiers = "deny"
filetype_is_file = "warn"
float_cmp_const = "warn"
fn_to_numeric_cast_any = "warn"
get_unwrap = "deny"
if_then_some_else_none = "warn"
impl_trait_in_params = "deny"
indexing_slicing = "warn"
infinite_loop = "deny"
integer_division_remainder_used = "warn"
iter_over_hash_type = "warn"
large_include_file = "warn"
let_underscore_untyped = "warn"
lossy_float_literal = "deny"
map_err_ignore = "warn"
map_with_unused_argument_over_ranges = "warn"
mem_forget = "deny"
missing_assert_message = "deny"
missing_asserts_for_indexing = "warn"
missing_docs_in_private_items = "warn"
mixed_read_write_in_expression = "warn"
mod_module_files = "deny"
module_name_repetitions = "warn"
modulo_arithmetic = "warn"
multiple_crate_versions = "allow"
multiple_inherent_impl = "warn"
mutex_atomic = "warn"
mutex_integer = "warn"
needless_raw_strings = "warn"
non_zero_suggestions = "deny"
panic = "warn"
panic_in_result_fn = "warn"
partial_pub_fields = "warn"
pathbuf_init_then_push = "warn"
pattern_type_mismatch = "warn"
precedence_bits = "warn"
print_stderr = "warn"
print_stdout = "warn"
pub_use = "warn"
pub_without_shorthand = "deny"
rc_buffer = "warn"
rc_mutex = "warn"
redundant_type_annotations = "warn"
ref_patterns = "warn"
renamed_function_params = "deny"
rest_pat_in_fully_bound_structs = "deny"
return_and_then = "warn"
same_name_method = "deny"
semicolon_outside_block = "warn"
shadow_reuse = "warn"
shadow_same = "warn"
shadow_unrelated = "warn"
single_char_lifetime_names = "warn"
str_to_string = "warn"
string_add = "warn"
string_lit_chars_any = "warn"
string_slice = "warn"
string_to_string = "warn"
suspicious_xor_used_as_pow = "warn"
tests_outside_test_module = "deny"
todo = "deny"
try_err = "warn"
unimplemented = "warn"
unnecessary_safety_comment = "deny"
unnecessary_safety_doc = "deny"
unnecessary_self_imports = "warn"
unneeded_field_pattern = "warn"
unseparated_literal_suffix = "warn"
unused_result_ok = "warn"
unused_trait_names = "warn"
unwrap_in_result = "warn"
unwrap_used = "warn"
use_debug = "warn"
verbose_file_reads = "deny"
wildcard_enum_match_arm = "warn"

[lints.clippy.cargo]
level = "warn"
priority = -1

[lints.clippy.nursery]
level = "warn"
priority = -1

[lints.clippy.pedantic]
level = "warn"
priority = -1

[lints.rust]
absolute_paths_not_starting_with_crate = "warn"
ambiguous_negative_literals = "warn"
closure_returning_async_block = "warn"
deref_into_dyn_supertrait = "warn"
elided_lifetimes_in_paths = "warn"
explicit_outlives_requirements = "warn"
ffi_unwind_calls = "warn"
if_let_rescope = "warn"
impl_trait_redundant_captures = "warn"
macro_use_extern_crate = "deny"
meta_variable_misuse = "warn"
missing_docs = "warn"
non_ascii_idents = "forbid"
redundant_imports = "warn"
redundant_lifetimes = "warn"
single_use_lifetimes = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unit_bindings = "warn"
unnameable_types = "warn"
unreachable_pub = "warn"
unsafe_code = "forbid"
unused_crate_dependencies = "warn"
unused_import_braces = "warn"
unused_lifetimes = "warn"
unused_macro_rules = "warn"
unused_qualifications = "warn"
unused_results = "warn"
variant_size_differences = "warn"

[lints.rust.let_underscore]
level = "warn"
priority = -1
